--- a/StudyingStudycafeHomepage.html
+++ b/StudyingStudycafeHomepage.html
@@ -20,6 +20,9 @@ gtag('config', 'UA-144345480-1');
   </head>
   <body>
     <style type="text/css">
+    body {
+      text-align: center;
+    }
       .jumbotron {
         background-image: url('images/도서관3수정.jpg');
         background-size: cover;
@@ -95,13 +98,14 @@ gtag('config', 'UA-144345480-1');
            </div>
       </div>
     </nav>
-    <br>
+    <img src="images/studying21사이즈수정.jpg" width="20%">
+    <br><br>
     <div class="container">
       <div class="jumbotron">
         <br><br>
-        <h1>STUDYING을<br>소개합니다.</h1>
+        <h1>STUDYING을<br>소개합니다</h1>
         <br>
-        <p>스터딩스터디카페는 회원분들이 공부에 집중할 수 있도록 최상의 환경을 제공합니다.</p>
+        <p>스터딩스터디카페는 회원님들이 공부에 집중할 수 있도록 최상의 공간을 대여해드립니다.</p>
         <br>
       </div>
     </div>
@@ -114,7 +118,7 @@ gtag('config', 'UA-144345480-1');
     <br>
     <div class="taehwa">
       <h2>울산 태화점</h2>
-      <img src="images/울산태화점사진2.jpg" width="100%">
+      <img src="images/태화점사진2.jpg" width="100%">
       <p><a href="스터딩스터디카페태화점내부사진.html" class="btn btn-primary">더보기</a></p>
     </div>
         <br><br>
