--- a/스터딩스터디카페태화점내부사진.html
+++ b/스터딩스터디카페태화점내부사진.html
@@ -70,8 +70,8 @@ h1{
           <img src="images/태화점사진6.jpg" width="100%">
           <img src="images/태화점사진10.jpg" width="100%">
           <img src="images/태화점사진12.jpg" width="100%">
-          <img src="images/태화점사진합성.jpg" width="100%">
-          <img src="images/태화점사진합성2.jpg" width="100%">
+          <img src="images/태화점사진합성.JPG" width="100%">
+          <img src="images/태화점사진합성2.JPG" width="100%">
         </p>
     <br>
     <footer style="background-color: #000000; color: #ffffff;">
